--- a/Frontend/about.css
+++ b/Frontend/about.css
@@ -68,3 +68,44 @@ p {
         padding: 8px 15px;
     }
 }
+
+.offer-container,
+.choose-container{
+    margin-top: 2rem;
+}
+.offer-container h2,
+.choose-container h2{
+    font-size: 2.2rem;
+    margin-bottom: 10px;
+}
+.offer-container ul,
+.choose-container ul{
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.offer-container ul li,
+.choose-container ul li{
+    width: 32%;
+    height: 200px;
+    margin: 1rem;
+    font-size: 1.2rem;
+    padding: 1.2rem;
+    border: 2px solid #ffcb00;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 1rem;
+}
+@media(max-width: 768px){
+    .offer-container ul,
+    .choose-container ul{
+        flex-direction: column;
+    }
+    .offer-container ul li,
+    .choose-container ul li{
+        width: 80%;
+        height: 100px;
+    }
+}
