--- a/Frontend/signup.css
+++ b/Frontend/signup.css
@@ -63,6 +63,11 @@ body {
     box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2);
     transform: scale(1.02);
 }
+.signup-wrapper input::placeholder{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
+    color: #444;
+}
 
 /* Signup Title */
 .signup-title {
@@ -74,7 +79,7 @@ body {
 /* Input Fields */
 .signup-input {
     width: 100%;
-    padding: 12px;
+    padding: 15px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 6px;
