--- a/Frontend/about.css
+++ b/Frontend/about.css
@@ -1,4 +1,5 @@
 body {
+    
     font-family: Arial, sans-serif;
     background: linear-gradient(to right, #2b6cb0, #4a90e2);
     color: white;
@@ -8,7 +9,7 @@ body {
 }
 .about-container {
     margin-top: 50px auto;
-    max-width: 800px;
+    max-width: 400px;
     margin-top: 60px;
     margin-left: 360px;
     background: rgba(255, 255, 255, 0.1);
@@ -66,6 +67,12 @@ p {
 
     .back-button {
         padding: 8px 15px;
+    }
+}
+@media(max-width:1020px){
+    .about-container{
+        padding: 20px;
+        margin: 30px auto;
     }
 }
 
