--- a/Frontend/about.css
+++ b/Frontend/about.css
@@ -58,6 +58,15 @@ p {
 }
 
 /* Responsive Fix */
+@media(max-width:830px){
+    .about{
+        margin: 50px;
+     }
+    .about-container {
+        padding: 20px;
+        margin: 30px auto;
+    }
+}
 @media (max-width: 768px) {
     .about-container {
         padding: 20px;
@@ -66,6 +75,12 @@ p {
 
     .back-button {
         padding: 8px 15px;
+    }
+}
+@media(max-width:1075px){
+    .about-container{
+        padding: 20px;
+        margin: 30px auto;
     }
 }
 
