--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -100,11 +100,11 @@ header .nav-links a:hover {
 
 
 #hero a {
-  
   background: linear-gradient(45deg, #f7b611,#57bff3);
   color: rgb(31, 30, 30);
   font-family: bold;
   font-size: 22px;
+  margin-right: 30px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   padding: 14px 32px;
   font-weight: bold;
