--- a/Frontend/contact.css
+++ b/Frontend/contact.css
@@ -36,23 +36,32 @@ h1 {
     border: none;
     border-radius: 5px;
     font-size: 1rem;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
     color: black;
 }
 .contact-form input:focus, .contact-form textarea:focus {
-    outline: 2px solid #ffcb00;
+    box-shadow: 2px 4px 5px rgba(193, 241, 16, 0.925);
+    outline: none;
 }
 .contact-form button {
-    background-color: #ffcb00;
-    color: black;
+    background: linear-gradient(135deg,#ffcb00,#6ccfeb);
+    color: #444;
+    font-weight: bold;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border: none;
     padding: 10px 15px;
     font-size: 1rem;
     border-radius: 5px;
     cursor: pointer;
-    transition: 0.3s;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    box-shadow: 0px 4px 8px rgba(240, 128, 128, 0.1);
+    transition: all 0.3s ease-in-out;
 }
 .contact-form button:hover {
-    background-color: purple;
+   background: linear-gradient(135deg,#6ccfeb,#ffcb00);
+   transform: scale(1.12);
     color: white;
 }
 
