--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -23,7 +23,7 @@
 }
 
 body {
-  background-color: hsla(51, 67%, 73%, 0.9);
+ background-color: white;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
