--- a/Frontend/about.css
+++ b/Frontend/about.css
@@ -113,6 +113,7 @@ p {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     border-radius: 1rem;
 }
+
 @media(max-width: 768px){
     .offer-container ul,
     .choose-container ul{
@@ -124,3 +125,23 @@ p {
         height: 100px;
     }
 }
+/* dark mode */
+.dark-mode .about {
+    background-color: #333;
+  }
+.dark-mode .navbar {
+    background: linear-gradient(#414141,#212121);
+
+  }
+.dark-mode .back-button{
+    background-color: #4e6bb4;
+}
+ body.dark-mode{
+    background: none;
+    background: linear-gradient(#414141,#212121);
+
+ }
+.dark-mode body{
+    background: none;
+}
+  
