--- a/Frontend/about.css
+++ b/Frontend/about.css
@@ -7,9 +7,8 @@ body {
     margin: 0;
 }
 .about-container {
-    margin-top: 50px auto;
-    max-width: 800px;
-    margin-top: 60px;
+    margin: 50px auto;
+    max-width: 700px;
     margin-left: 360px;
     background: rgba(255, 255, 255, 0.1);
     padding: 30px;
