--- a/Frontend/signup.css
+++ b/Frontend/signup.css
@@ -212,3 +212,24 @@ body {
     margin-bottom: 5px;
     }
 }
+.password-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.password-container input {
+    width: 100%;
+    padding-right: 40px;
+}
+
+.password-container i {
+    position: absolute;
+    right: 10px;
+    cursor: pointer;
+    color: #555;
+}
+
+.password-container i:hover {
+    color: #000;
+}
