--- a/Frontend/faq.css
+++ b/Frontend/faq.css
@@ -33,12 +33,12 @@ body {
   background: white;
 }
 .dark-mode .faq-section {
-  background: #2d3748; /* Darker background for contrast */
+  background: #1e1e1e; /* Darker background for contrast */
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .dark-mode .faq-container {
-  background-color: #2d3748; /* Darker background for contrast */
+  background-color: #333; /* Darker background for contrast */
 }
 
 .dark-mode h2 {
@@ -74,7 +74,7 @@ h2 {
 }
 
 .dark-mode .faq-item {
-  background-color: #2d3748;
+  background-color: #333;
 }
 
 /* Question Section */
