--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -300,7 +300,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: flex-end; /* Aligns to the right */
-  text-align: right;
+  text-align: center;
   margin-left: auto; /* Pushes links to the right */
 }
 
