--- a/Frontend/signup.css
+++ b/Frontend/signup.css
@@ -1,4 +1,23 @@
 /* General Reset */
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 10px;
+  background-color: #3e82cbdf;
+}
+
+::-webkit-scrollbar:hover {
+  background-color: #57bff3;
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: 2px 2px 5px #00b3ee;
+  background: linear-gradient(45deg, #003b6c, #0569dd);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(45deg, #0569dd, #003b6c);
+}
 * {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -14,7 +33,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh; /* Full height of viewport */
+    height: 100vh; 
+    overflow-x: hidden;
 }
 
 /* Navbar */
@@ -23,7 +43,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    background: linear-gradient(to right, #217bca, #14b1b9);
+    background: rgba(255, 255, 255, 0.2);
     padding: 15px;
     display: flex;
     justify-content: flex-start;
@@ -240,7 +260,7 @@ body {
     color: #000;
 }
 footer {
-    background: linear-gradient(to right, #2165a1, #099ca3);
+    background: rgba(255, 255, 255, 0.2);;
     color: white;
     padding: 20px 0;
     box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
