--- a/Frontend/about.css
+++ b/Frontend/about.css
@@ -6,6 +6,13 @@ body {
     padding: 0;
     margin: 0;
 }
+body.dark-mode{
+    background:#000;
+    
+}
+.dark-mode .about-container{
+    background: #333333;
+}
 .about-container {
     margin: 50px auto;
     max-width: 700px;
