faq page alignment fixed

--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -368,7 +368,7 @@ footer {
   align-items: center;
   justify-content: center;
   width: 94%;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   padding-bottom: 20px;
 }
 
