--- a/Frontend/contributor/contributor.css
+++ b/Frontend/contributor/contributor.css
@@ -220,3 +220,15 @@ body {
   .certificate-btn:hover::after {
     opacity: 1;
   }
+
+  .search-container {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.search-input {
+    padding: 10px;
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
