Fixed Review container and footer of main page

--- a/Frontend/review/review.css
+++ b/Frontend/review/review.css
@@ -20,7 +20,7 @@ body {
   margin: auto;
   text-align: center;
   padding: 40px 20px;
-  margin-top: 50px;
+  margin-top: 10rem;
   margin-bottom: 50px;
   background: #fff;
   border-radius: 10px;
