Fixed Privary page

--- a/Frontend/privacy/privacy.css
+++ b/Frontend/privacy/privacy.css
@@ -10,6 +10,7 @@ body {
     max-width: 800px;
     margin: 50px auto;
     padding: 20px;
+    margin-top: 10rem;
     border: 2px solid #2B6CB0;
     box-shadow: 0px 4px 8px #2B6CB0;
     border-radius: 8px;
