dark mode in report

--- a/Frontend/report/report.css
+++ b/Frontend/report/report.css
@@ -4,6 +4,20 @@ body{
     margin: 0;
     padding: 0; 
 }
+#toggleTheme{
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    background-color: #333232;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+body.dark-mode{
+    background-color: #333232;
+}
 .container{
     height: 100vh;
     display: flex;
@@ -11,6 +25,18 @@ body{
     align-items: center;
     margin: 0 auto;
     padding: 0 20px;
+}
+.dark-mode .container>form{
+    background-color: #847d7d;
+    border: 1px solid #d8f2f6;
+}
+.dark-mode #toggleTheme{
+    background-color: #d8f2f6;
+    color: black;
+}
+.dark-mode #submit-btn{
+    background-color: #adee85;
+    color: black;
 }
 .container>form{
     background-color: #d8f2f6;
