dark mode added in report page

--- a/Frontend/report/report.css
+++ b/Frontend/report/report.css
@@ -6,17 +6,18 @@ body{
 }
 #toggleTheme{
     position: fixed;
-    top: 10px;
-    right: 10px;
+    top: 12px;
+    right: 12px;
+    font-size: large;
     background-color: #333232;
     color: white;
     padding: 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: 6px;
     cursor: pointer;
 }
 body.dark-mode{
-    background-color: #333232;
+    background-color: #413f3f;
 }
 .container{
     height: 100vh;
@@ -26,16 +27,16 @@ body.dark-mode{
     margin: 0 auto;
     padding: 0 20px;
 }
-.dark-mode .container>form{
+.dark-mode  .container>form{
     background-color: #847d7d;
-    border: 1px solid #d8f2f6;
+    border: 1px solid #d9f1f5;
 }
 .dark-mode #toggleTheme{
     background-color: #d8f2f6;
     color: black;
 }
 .dark-mode #submit-btn{
-    background-color: #adee85;
+    background-color: #eed285;
     color: black;
 }
 .container>form{
@@ -53,6 +54,7 @@ body.dark-mode{
 #submit-btn{
     background-color: #333232;
     color: white;
+    font-weight: bold;;
     padding: 10px;
     border: none;
     border-radius: 5px;
