Fixed Overhidden of about us page

--- a/Frontend/about/about.css
+++ b/Frontend/about/about.css
@@ -17,6 +17,7 @@ body.dark-mode{
 .about{
     display:flex;
     justify-content: center;
+    margin-top: 3rem;
 }
 .about img{
     margin: 50px;
